# cmake_tutorial

./: CMakeLists.txt  main.cpp
lib/math/: operations.cpp  operations.hpp
